--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,17 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body >
     <%= render "shared/navbar" %>
     <div class="container">
+
+    <% if notice.present? %>
+      <%= render "shared/flash", message: notice, css_class: "success" %>
+    <% end %>
+    <% if alert.present? %>
+      <%= render "shared/flash", message: alert, css_class: "danger" %>
+    <% end %>
+
       <%= yield %>
     </div>
   </body>
