--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,8 +27,7 @@
           </li>
           <% end %>
         <div class="card-body">
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
+          <%= render "comments/form", comment: photo.comments.build %>
         </div>
       </div>
     </div>
