--- a/app/views/photos/liked.html.erb
+++ b/app/views/photos/liked.html.erb
@@ -23,9 +23,9 @@
   </div>
 </div>
 
-<%= current_user.own_photos.count %>
+<%= current_user.liked_photos.count %>
 
-<% current_user.own_photos.each do |photo| %>
+<% current_user.liked_photos.each do |photo| %>
   <%= render "photos/photo", photo: photo %>
 
   <% end %>
